--- a/WEB-TEST/Core/Styles/style.css
+++ b/WEB-TEST/Core/Styles/style.css
@@ -1,11 +1,17 @@
 :root{
+    background-image: url("/Assets/home_wpp.jpg");
 
 }
 *, *::before, *::after{
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 *{
     margin: 0;
+}
+html {
+
 }
 body{
     min-height: 100vh;
@@ -31,9 +37,10 @@ main.jeux div h2{
     display: flex;
     justify-content: center;
 
+    color: white;
     font-size: 3rem;
-    margin-top: 3%;
-    margin-bottom: 7%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
 main.jeux iframe {
@@ -42,9 +49,8 @@ main.jeux iframe {
 }
 
 main.jeux p {
+    color: white;
     font-size: 1.3rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
     margin-left: 3%;
 }
 
@@ -79,4 +85,50 @@ footer li{
 }
 .footer_title{
     color: white;
+}
+
+#demonsouls{
+    background-image: url("/Assets/demonsouls_wpp.jpg");
+    
+}
+#DS1{
+    background-image: url("/Assets/ds1_wpp.jpg");
+}
+#DS2{
+    background-image: url("/Assets/ds2_wpp.jpg");
+
+}
+#DS3{
+    background-image: url("/Assets/ds3_wpp.jpg");
+}
+#bloodborne{
+    background-image: url("/Assets/bloodborne_wpp.jpg");
+}
+#sekiro{
+    background-image: url("/Assets/sekiro_wpp.jpg");
+}
+#eldenring{
+    background-image: url("/Assets/eldenring_wpp.jpg");
+}
+
+p{
+   color: white; 
+}
+h1{
+    color: rgb(255, 255, 255);
+}
+
+.plus p{
+
+    font-size: 1.3rem;
+    margin-left: 3%;
+    margin-bottom: 10%;
+}
+
+.plus h2{
+    color: white;
+    font-size: 2rem;
+    margin-left: 3%;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
